--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,183 @@
-.test
+body
 {
-    font-size: 40px;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    height: 100%;
 }
+
+/*--------------- Menu -----------------*/
+#menu
+{
+    height: 70px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgba(240, 177, 245, 0.8);
+    transition: top 0.3s;
+    top: 0px;
+
+}
+
+nav
+{
+
+    display: flex;
+    justify-content: space-evenly;
+
+}
+
+nav a:active
+{
+    color: red;
+    border: 0px 0px 2px 0px;
+    border-style: solid;
+    border-color: red; 
+}
+
+/*--------------- Menu -----------------*/
+
+/*--------------- Section 1  -----------------*/
+@keyframes mymove {
+  50% {background-position: right;}
+}
+
+
+.section1{
+  /*
+    background-image: url(./img/ScreenProg2jpg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top left;
+    animation: mymove 5s infinite;
+    height: 500px;
+*/
+}
+
+
+.mySlides {display: none;}
+img { vertical-align: middle;}
+
+.carousel
+{
+   width: 100%;
+   height: 950px;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  position: relative;
+    margin: auto;
+    /* text-align: center; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+/* Caption text */
+.text {
+  color: black;
+  font-size: 25px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 600px;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+
+}
+.content
+{
+  padding: 10px 25px 10px 25px;
+  width: auto;
+  background-color: rgba(245, 240, 154, 0.5);
+  border-style: inset;
+}
+
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 2.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
+
+
+  /*--------------- Section 1  -----------------*/
+  /*--------------- Section 2  -----------------*/
+.cadreSection2
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.projet
+{
+
+}
+
+.competence
+{
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+}
+
+.container {
+    width: 100%;
+    background-color: #ddd;
+}
+
+.skills {
+    text-align: right;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: white;
+}
+
+.html {width: 90%; background-color: #04AA6D;}
+.css {width: 80%; background-color: #2196F3;}
+.js {width: 65%; background-color: #f44336;}
+.java {width: 60%; background-color: #808080;}
+
+.back
+{
+
+}
+
+.front
+{
+
+}
+
+  /*--------------- Section 2  -----------------*/
+
+
+
