--- a/src/main.css
+++ b/src/main.css
@@ -164,7 +164,7 @@ img { vertical-align: middle;}
   display: flex;
   flex-direction: column;
   text-align: center;
-  height: 1000px;
+  min-height: 1000px;
   justify-content: space-around;
 }
 
@@ -192,12 +192,26 @@ img { vertical-align: middle;}
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+
 }
 
 .projet
 {
-
+  display: flex;
+  flex-direction: column-reverse;
 }
+
+.cadreCompetence
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0px;
+  height: 90%;
+  font-size: 23px;
+}
+
+
 
 .competence
 {
@@ -261,10 +275,27 @@ img { vertical-align: middle;}
   /*--------------- Section 2  -----------------*/
   /*--------------- Section 3  -----------------*/
 
+.section3
+{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.cadreSection3
+{
+
+}
+.filterSection
+{
+
+}
+
 
 .filterDiv {
   float: left;
-  background-color: #2196F3;
+  background-color: rgba(2, 62, 138, 0.9);
   color: #ffffff;
   width: 100px;
   line-height: 100px;
@@ -277,6 +308,8 @@ img { vertical-align: middle;}
   display: block;
   width: 300px;
   height: 400px;
+  border-radius: 10px;
+  margin: 0px 15px 15px 15px;
 }
 
 .container {
@@ -312,7 +345,7 @@ img { vertical-align: middle;}
 
 .cadreTitleProject
 {
-  height: 50px;
+  background-color: rgba(0, 119, 182, 0.8);
   width: 100%;
   display: flex;
   justify-content: center;
@@ -320,14 +353,12 @@ img { vertical-align: middle;}
 
 .titleProject
 {
-  border-bottom-style: outset;
-  border-right-style: outset;
-  border-left-style: outset;
-    border-bottom-width: 1px;
-    border-radius: 15px;
-  border-color: white;
+  height: 50px;
   display: flex;
+
   justify-content: center;
+  flex-direction: column;
+
 }
 
 
@@ -345,5 +376,87 @@ img { vertical-align: middle;}
 .cadreInfoProject
 {
   text-align: center;
+  background-color: rgba(0, 119, 182, 0.8);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  color: black;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.btnModal {
+  border-radius: 4px;
+  background-color: #f4511e;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 5px 15px 5px 15px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.btnModal span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.btnModal span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.btnModal:hover span {
+  padding-right: 25px;
+}
+
+.btnModal:hover span:after {
+  opacity: 1;
+  right: 0;
+}
