--- a/src/main.css
+++ b/src/main.css
@@ -524,3 +524,121 @@ img { vertical-align: middle;}
 {
 
 }
+
+/*--------------------------------- Section 3 */
+
+
+/*--------------------------------- Section 4 */
+
+.section4
+{
+   height: 100%;
+   width: 100%;
+   margin-top: 20px;
+}
+
+
+.cadreTitleSection4
+{
+  font-size: 28px;
+  text-decoration: underline;
+  text-decoration-color: orange;
+  text-align: center;
+}
+
+.containerPropos
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  height: 800px;
+}
+
+.presentation
+{
+  font-size: 18px;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+}
+.sectionCode
+{
+  height: 300px;
+  margin: 10px 0px 10px 0px;
+  overflow-y: auto;
+}
+
+.titleSection
+{
+  font-size: 22px;
+  text-align: center;
+  text-decoration: underline;
+  text-decoration-color: gray;
+}
+
+.cadreImgPropos
+{
+  display: flex;
+  align-items: center;
+}
+.cadreImgPropos img
+{
+  height: 400px;
+  width: 430px;
+}
+
+
+.cadreSectionCode
+{
+  width: 30%;
+}
+
+.cadreContact
+{
+  height: 300px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.fa {
+  padding: 20px;
+  font-size: 50px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  height: fit-content;
+  border-radius: 5px;
+}
+
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+
+.fa-github {
+  background: #2c4762;
+  color: white;
+}
+
+
+
+
