--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,6 @@
 body
 {
+  width: 100%;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     height: 100%;
@@ -11,7 +12,7 @@ body
 #menu
 {
     height: 70px;
-    width: 100%;
+    width: 100%; 
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -206,9 +207,24 @@ img { vertical-align: middle;}
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 0px;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
   height: 90%;
   font-size: 23px;
+  overflow-y: auto;
+}
+.lineCompetence
+{
+    border-style: groove;
+    margin-top: -1px;
+    margin: 5px;
+    background-color: #f6f6f6;
+    padding: 12px;
+    border-radius: 5px;
+    border: 0px 1px 0px 1px;
+    border-top: none;
+
 }
 
 
@@ -280,22 +296,26 @@ img { vertical-align: middle;}
   display: flex;
   flex-direction: column;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 50px;
 }
 
-.cadreSection3
+.titleSection3
 {
-
-}
-.filterSection
-{
-
+  font-size: 33px;
+  text-decoration: underline;
+  text-decoration-color: orange;
+  height: 70px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
 }
 
 
 .filterDiv {
   float: left;
-  background-color: rgba(2, 62, 138, 0.9);
+  background-color: rgba(2, 62, 138, 0.4);
   color: #ffffff;
   width: 100px;
   line-height: 100px;
@@ -331,7 +351,7 @@ img { vertical-align: middle;}
 }
 
 .btn.active {
-  background-color: #666;
+  background-color: red;
   color: white;
 }
 
@@ -345,7 +365,7 @@ img { vertical-align: middle;}
 
 .cadreTitleProject
 {
-  background-color: rgba(0, 119, 182, 0.8);
+  background-color: rgba(0, 119, 182, 0.3);
   width: 100%;
   display: flex;
   justify-content: center;
@@ -396,7 +416,7 @@ img { vertical-align: middle;}
 .cadreInfoProject
 {
   text-align: center;
-  background-color: rgba(0, 119, 182, 0.8);
+  background-color: rgba(0, 119, 182, 0.4);
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -427,6 +447,7 @@ img { vertical-align: middle;}
   width: 80%;
   color: black;
   border-radius: 15px;
+  overflow-y: auto;
 }
 
 /* The Close Button */
@@ -457,14 +478,14 @@ img { vertical-align: middle;}
   margin: 5px;
 }
 
-.btnModal span {
+.spanModal {
   cursor: pointer;
   display: inline-block;
   position: relative;
   transition: 0.5s;
 }
 
-.btnModal span:after {
+.spanModal:after {
   content: '\00bb';
   position: absolute;
   opacity: 0;
@@ -496,15 +517,33 @@ img { vertical-align: middle;}
 {
   width: 100%;
   height: 75px;
-  font-size: 20px;
+  font-size: 23px;
   text-decoration: underline;
   text-decoration-color: black;
 
 }
 
+.contourLink
+{
+  padding: 40px;
+  /* background-color: rgba(2, 62, 138,0.8); */
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.link
+{
+  font-size: 20px;
+  background-color: rgba(144, 224, 239,0.8);
+}
+
 .contentDescription
 {
-
+  font-size: 19px;
+  border-width: 1px;
+    border-style: dotted;
+    border-radius: 15px;
 }
 
 
@@ -522,7 +561,7 @@ img { vertical-align: middle;}
 
 .linkModal
 {
-
+  margin-bottom: 30px;
 }
 
 /*--------------------------------- Section 3 */
@@ -600,6 +639,14 @@ img { vertical-align: middle;}
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  align-items: center;
+}
+
+.contourContact
+{
+  padding: 40px;
+  background-color: rgba(2, 62, 138,0.8);
+  border-radius: 10px;
 }
 
 .fa {
